--- a/locales/en.json
+++ b/locales/en.json
@@ -4,14 +4,17 @@
     "for_you":"For You test",
     "filter_by_topic":"Filter By Topic",
     "all_news":"All News",
+    "latest_news":"Latest News",
     "my_feed":"My Feed",
     "search":"Search",
     "home":"Home",
     "you":"You",
     "login": "Login",
     "signup": "Sign Up",
+    "account": "Account",
     "username": "Username",
     "password": "Password",
+    "change_password": "Reset Password",
     "email": "Email",
     "login_message":"Login to personalise your experience",
     "confirmPassword": "Confirm Password",
