update search news

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,7 @@
 {
-    //home page
+    
 
-    "for_you":"For You test",
+    "for_you":"For You",
     "filter_by_topic":"Filter By Topic",
     "all_news":"All News",
     "latest_news":"Latest News",
