share, play and save option added

--- a/locales/en.json
+++ b/locales/en.json
@@ -23,8 +23,8 @@
     "forgotPassword": "Forgot Password?",
     "emailRequired": "Email is required",
     "passwordRequired": "Password is required",
-    "createNewUser": "Create a new account",
-    "createAccount": "Create Account",
+    "activity": "Activity",
+    "bookmarkedNews": "Saved Story",
     "signupHeadline": "Sign up to get Started",
     "alreadyUser": "I already have an account",
     "usernameRequired": "Name is required",
